--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 							<h1>Lehem Temesgen</h1>
 							<p class="major"></p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Scroll ↓</a></li>
+								<li><a href="#about" class="button big wide smooth-scroll-middle">Scroll ↓</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -27,7 +27,7 @@
 					</section>
 
 				<!-- About Me -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="about">
 						<div class="content">
 							<h2>About Me</h2>
 							<p>👋🏾 Hi! I’m Lehem Temesgen, a third-year Software Engineering student at Carleton University, currently exploring the different areas within the field as I develop my skills.</p>
@@ -43,10 +43,10 @@
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Tempus adipiscing</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Projects</h2>
+							<p>...</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll-middle">Scroll ↓</a></li>
 							</ul>
 						</div>
 						<div class="image">
