--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 						</div>
 					</section>
 
-				<!-- Three -->
+				<!-- Projects -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Projects</h2>
 							<p>...</p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Scroll ↓</a></li>
+								<li><a href="#more" class="button big wide smooth-scroll-middle">More ↓</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -55,18 +55,18 @@
 					</section>
 
 				<!-- More -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="more">
 						<div class="content">
 							<h2>More about me!</h2>
 							<p>
 
 							</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="#" class="button">Resume</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/more.jpg" alt="" />
 						</div>
 					</section>
 
