--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="about">
 						<div class="content">
 							<h2>About Me</h2>
-							<p>👋🏾 Hi! I’m Lehem Temesgen, a third-year Software Engineering student at Carleton University, currently exploring the different areas within the field as I develop my skills.</p>
+							<p>👋🏾 Hi! I’m Lehem, a third-year Software Engineering student at Carleton University, currently exploring the different areas within the field as I develop my skills.</p>
 							<ul class="actions stacked">
-								<li><a href="https://www.linkedin.com/in/lehem-temesgen/" class="button">LinkedIn</a></li>
+								<li><a href="https://www.linkedin.com/in/lehem-temesgen/" target="_blank" class="button">LinkedIn</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -41,32 +41,39 @@
 					</section>
 
 				<!-- Projects -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="projects">
 						<div class="content">
 							<h2>Projects</h2>
-							<p>...</p>
+							<ul class="actions stacked">
+								<li><a href="https://github.com/LehemT" target="_blank" class="button">GitHub</a></li>
+							</ul>
+						</div>
 							<ul class="actions stacked">
 								<li><a href="#more" class="button big wide smooth-scroll-middle">More ↓</a></li>
 							</ul>
-						</div>
-						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
-						</div>
 					</section>
 
 				<!-- More -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="more">
+					<section class="spotlight style1 orient-left content-align-left image-position-centre onscroll-image-fade-in" id="more">
 						<div class="content">
 							<h2>More about me!</h2>
 							<p>
+								I'm currently seeking Winter 2025 oppertunities!
+								<br>
+								<br>
+								Technical Skills:
 
+								<br>
+								<br>
+								Extracurriculars:
+															
 							</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Resume</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/more.jpg" alt="" />
+							<img src="extras/resume.pdf" alt="" />
 						</div>
 					</section>
 
@@ -75,8 +82,8 @@
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="https://github.com/LehemT" target="_blank" class="icon brands style2 fa-github"><span class="label">github</span></a></li>
-								<li><a href="https://www.linkedin.com/in/lehem-temesgen/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="mailto:lehem.temesgen@gmail.com" class="icon brands style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://www.linkedin.com/in/lehem-temesgen/" target="_blank" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="mailto:lehem.temesgen@gmail.com" target="_blank" class="icon brands style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<p>&copy; 2024 Lehem Temesgen</p>
 						</div>
