--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 							</ul>
 						</div>
 						<div class="image">
+							<img src="images/more.jpg" alt="more" />
+						</div>
+						<div class="image">
 							<img src="extras/resume.pdf" alt="" />
 						</div>
 					</section>
