--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Lehem Temesgen</h1>
+							<nav class="menu">
+						            <ul class="actions stacked">
+						                <li><a href="#about" class="menu-item">About Me</a></li>
+						                <li><a href="#projects" class="menu-item">Projects</a></li>
+						                <li><a href="#more" class="menu-item">More</a></li>
+						            </ul>
+							</nav>
 							<p class="major"></p>
 							<ul class="actions stacked">
 								<li><a href="#about" class="button big wide smooth-scroll-middle">Scroll ↓</a></li>
