--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<div id="wrapper" class="divided">
 
 				<!-- Homepage -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+					<section class="banner style1 orient-left content-align-left image-position-right onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Lehem Temesgen</h1>
 							<nav class="menu">
