--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<div id="wrapper" class="divided">
 
 				<!-- Homepage -->
-					<section class="banner style1 orient-left content-align-left image-position-right onload-image-fade-in onload-content-fade-right">
+					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Lehem Temesgen</h1>
 							<nav class="menu">
@@ -48,16 +48,13 @@
 					</section>
 
 				<!-- Projects -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="projects">
-						<div class="content">
+					<section class="wrapper style1 alin-center" id="projects">
+						<div class="inner">
 							<h2>Projects</h2>
 							<ul class="actions stacked">
 								<li><a href="https://github.com/LehemT" target="_blank" class="button">GitHub</a></li>
 							</ul>
 						</div>
-							<ul class="actions stacked">
-								<li><a href="#more" class="button big wide smooth-scroll-middle">More ↓</a></li>
-							</ul>
 					</section>
 
 				<!-- More -->
