--- a/index.html
+++ b/index.html
@@ -17,14 +17,11 @@
 						<div class="content">
 							<h1>Lehem Temesgen</h1>
 							<ul class="actions stacked">
-								<li><a href="#about" class="button small smooth-scroll-middle">About</a></li>
-								<li><a href="#projects" class="button small smooth-scroll-middle">Projects</a></li>
-								<li><a href="#more" class="button small smooth-scroll-middle">Projects</a></li>
+								<li><a href="#about" class="button big wide smooth-scroll-middle">About</a></li>
+								<li><a href="#projects" class="button big wide smooth-scroll-middle">Projects</a></li>
+								<li><a href="#more" class="button big wide smooth-scroll-middle">More</a></li>
 							</ul>
 							<p class="major"></p>
-							<ul class="actions stacked">
-								<li><a href="#about" class="button big wide smooth-scroll-middle">Scroll ↓</a></li>
-							</ul>
 						</div>
 						<div class="image">
 							<img src="images/headshot.png" alt="Lehem Temesgen"/>
@@ -46,7 +43,7 @@
 					</section>
 
 				<!-- Projects -->
-					<section class="wrapper style1 alin-center" id="projects">
+					<section class="wrapper style1 align-center" id="projects">
 						<div class="inner">
 							<h2>Projects</h2>
 							<ul class="actions stacked">
@@ -71,14 +68,11 @@
 															
 							</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Resume</a></li>
+								<li><a href="extras/resume.pdf" target="_blank" class="button">Resume</a></li>
 							</ul>
 						</div>
 						<div class="image">
 							<img src="images/more.jpg" alt="more" />
-						</div>
-						<div class="image">
-							<img src="extras/resume.pdf" alt="" />
 						</div>
 					</section>
 
