--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							<ul class="icons">
 								<li><a href="https://github.com/LehemT" target="_blank" class="icon brands style2 fa-github"><span class="label">github</span></a></li>
 								<li><a href="https://www.linkedin.com/in/lehem-temesgen/" target="_blank" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="mailto:lehem.temesgen@gmail.com" target="_blank" class="icon brands style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="mailto:lehem.temesgen@gmail.com" target="_blank" class="icon brands style2 fa fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<p>&copy; 2024 Lehem Temesgen</p>
 						</div>
