--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Lehem Temesgen</h1>
+							<h4 style="margin-bottom: 20px;">Welcome to my personal website, where I share my ongoing journey in tech. Feel free to explore the options below to learn more about me, my work, and my background!</h4>
+							
 							<ul class="actions stacked">
 								<li><a href="#about" class="button big wide smooth-scroll-middle">About</a></li>
 								<li><a href="#projects" class="button big wide smooth-scroll-middle">Projects</a></li>
@@ -45,7 +47,7 @@
 				<!-- Projects -->
 					<section class="wrapper style1 align-center" id="projects">
 						<div class="inner">
-							<h2>Projects</h2>
+							<h2>Programming Projects</h2>
 							<ul class="actions stacked">
 								<li><a href="https://github.com/LehemT" target="_blank" class="button">GitHub</a></li>
 							</ul>
@@ -55,7 +57,7 @@
 				<!-- More -->
 					<section class="spotlight style1 orient-left content-align-left image-position-centre onscroll-image-fade-in" id="more">
 						<div class="content">
-							<h2>More about me!</h2>
+							<h2>Skills & Interests</h2>
 							<p>
 								I'm currently seeking Winter 2025 oppertunities!
 								<br>
