--- a/index.html
+++ b/index.html
@@ -65,11 +65,14 @@
 								I'm currently seeking Winter 2025 oppertunities!
 								<br>
 								<br>
-								Technical Skills:
-
+								Technical Skills
+								   • Languages: Java, Python, C/C++
+							           • Libraries & Frameworks: JUnit, Matplotlib, NumPy, Pandas, scikit-learn, Swing
 								<br>
 								<br>
-								Extracurriculars:
+								Extracurriculars
+								   • Logistics Coordinator at <a href="https://hackthehill.org/" target="_blank">Hack the Hill</a>
+								   • Co-President of <a href="https://linktr.ee/eesa.cu" target="_blank">Eritrean-Ethiopian Students’ Association</a>
 															
 							</p>
 							<ul class="actions stacked">
