--- a/index.html
+++ b/index.html
@@ -54,6 +54,23 @@
 							<ul class="actions stacked">
 								<li><a href="https://github.com/LehemT" target="_blank" class="button">GitHub</a></li>
 							</ul>
+							<div class="project-container">
+						            <div class="project-card">
+						                <img src="pic01.jpg" alt="Text-Based Facebook" class="project-image">
+						                <div class="project-info">
+						                    <h3>Text-Based Facebook</h3>
+						                    <p>C</p>
+								    <a href="https://github.com/LehemT/Text-Based-Facebook" target="_blank" class="code-button">Code</a>
+						                </div>
+						            </div>
+						            <div class="project-card">
+						                <img src="pic02.jpg" alt="Data Visualizer" class="project-image">
+						                <div class="project-info">
+						                    <h3>Data Visualizer</h3>
+						                    <p>Python</p>
+								    <a href="https://github.com/LehemT/Data-Visualizer" target="_blank" class="code-button">Code</a>
+						                </div>
+						            </div>							
 						</div>
 					</section>
 
