--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 						                <div class="project-info">
 						                    <h3>Text-Based Facebook</h3>
 						                    <p>C</p>
-								    <a href="https://github.com/LehemT/Text-Based-Facebook" target="_blank" class="code-button">Code</a>
+								    <ul class="actions fixed">
+									    <li><span class="button small"><a href="https://github.com/LehemT/Text-Based-Facebook" target="_blank">Code</a></span></li>
+								    </ul>
 						                </div>
 						            </div>
 						            <div class="project-card">
@@ -68,7 +70,9 @@
 						                <div class="project-info">
 						                    <h3>Data Visualizer</h3>
 						                    <p>Python</p>
-								    <a href="https://github.com/LehemT/Data-Visualizer" target="_blank" class="code-button">Code</a>
+								    <ul class="actions fixed">
+									    <li><span class="button small"><a href="https://github.com/LehemT/Data-Visualizer" target="_blank">Code</a></span></li>
+								    </ul>
 						                </div>
 						            </div>							
 						</div>
