--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 							</ul>
 							<div class="project-container">
 						            <div class="project-card">
-						                <img src="pic01.jpg" alt="Text-Based Facebook" class="project-image">
+								<div class="image">
+									<img src="pic01.jpg" alt="Text-Based Facebook"/>
+								</div>
 						                <div class="project-info">
 						                    <h3>Text-Based Facebook</h3>
 						                    <p>C</p>
@@ -66,7 +68,9 @@
 						                </div>
 						            </div>
 						            <div class="project-card">
-						                <img src="pic02.jpg" alt="Data Visualizer" class="project-image">
+								<div class="image">
+									<img src="pic02.jpg" alt="Data Visualizer"/>
+								</div>
 						                <div class="project-info">
 						                    <h3>Data Visualizer</h3>
 						                    <p>Python</p>
