--- a/index.html
+++ b/index.html
@@ -48,38 +48,41 @@
 					</section>
 
 				<!-- Projects -->
-					<section class="wrapper style1 align-center" id="projects">
+					<section class="gallery style1" id="projects">
 						<div class="inner">
 							<h2>Programming Projects</h2>
 							<ul class="actions stacked">
 								<li><a href="https://github.com/LehemT" target="_blank" class="button">GitHub</a></li>
 							</ul>
-							<div class="project-container">
-						            <div class="project-card">
-								<div class="image">
-									<img src="pic01.jpg" alt="Text-Based Facebook"/>
-								</div>
-						                <div class="project-info">
+						</div>
+
+							<div class="gallery style1">
+						            <article>
+						            	<a class="image">
+						                    <img src="pic01.jpg" alt="Text-Based Facebook">
+						                </a>
+						                <div class="caption">
 						                    <h3>Text-Based Facebook</h3>
-						                    <p>C</p>
-								    <ul class="actions fixed">
+						                    <p>A text-based facebook implementation built with C.</p>
+						                    <ul class="actions fixed">
 									    <li><span class="button small"><a href="https://github.com/LehemT/Text-Based-Facebook" target="_blank">Code</a></span></li>
 								    </ul>
 						                </div>
-						            </div>
-						            <div class="project-card">
-								<div class="image">
-									<img src="pic02.jpg" alt="Data Visualizer"/>
-								</div>
-						                <div class="project-info">
-						                    <h3>Data Visualizer</h3>
-						                    <p>Python</p>
-								    <ul class="actions fixed">
+						            </article>
+
+							    <article>
+						            	<a class="image">
+						                    <img src="pic02.jpg" alt="Data Visualizer">
+						                </a>
+						                <div class="caption">
+						                    <h3>Text-Based Facebook</h3>
+						                    <p>A text-based facebook implementation built with C.</p>
+						                    <ul class="actions fixed">
 									    <li><span class="button small"><a href="https://github.com/LehemT/Data-Visualizer" target="_blank">Code</a></span></li>
 								    </ul>
 						                </div>
-						            </div>							
-						</div>
+						            </article>
+							</div>
 					</section>
 
 				<!-- More -->
