--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					</section>
 
 				<!-- Projects -->
-					<section class="gallery style1" id="projects">
+					<section class="wrapper style1 align-center" id="projects">
 						<div class="inner">
 							<h2>Programming Projects</h2>
 							<ul class="actions stacked">
@@ -56,7 +56,7 @@
 							</ul>
 						</div>
 
-							<div class="gallery style1">
+							<div class="gallery style1 medium darkbox onscroll-fade-in">
 						            <article>
 						            	<a class="image">
 						                    <img src="pic01.jpg" alt="Text-Based Facebook">
@@ -75,8 +75,8 @@
 						                    <img src="pic02.jpg" alt="Data Visualizer">
 						                </a>
 						                <div class="caption">
-						                    <h3>Text-Based Facebook</h3>
-						                    <p>A text-based facebook implementation built with C.</p>
+						                    <h3>Data Visualizer</h3>
+						                    <p>A data visualizer built with Python.</p>
 						                    <ul class="actions fixed">
 									    <li><span class="button small"><a href="https://github.com/LehemT/Data-Visualizer" target="_blank">Code</a></span></li>
 								    </ul>
