--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<div class="gallery style1 large lightbox onscroll-fade-in">
 							<article>
 								<a class="image">
-									<img src="pic01.jpg" alt="Text-Based Facebook">
+									<img src="images/pic01.jpg" alt="Text-Based Facebook">
 								</a>
 								<div class="caption">
 									<h3>Text-Based Facebook</h3>
@@ -72,7 +72,7 @@
 
 							<article>
 								<a class="image">
-									<img src="pic02.jpg" alt="Data Visualizer">
+									<img src="images/pic02.jpg" alt="Data Visualizer">
 								</a>
 								<div class="caption">
 									<h3>Data Visualizer</h3>
