--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
 					</div>
 
 						<div class="gallery style1 medium darkbox onscroll-fade-in">
+							
 							<article>
 								<a class="image">
-									<img src="images/pic01.jpg" alt="Text-Based Facebook">
+									<img src="images/facebook.jpg" alt="Text-Based Facebook">
 								</a>
 								<div class="caption">
 									<h3>Text-Based Facebook</h3>
@@ -69,10 +70,49 @@
 									</ul>
 								</div>
 							</article>
+							
+							<article>
+								<a class="image">
+									<img src="images/study.jpg" alt="Study Sync">
+								</a>
+								<div class="caption">
+									<h3>Study Sync</h3>
+									<p>...</p>
+									<ul class="actions fixed">
+										<li><span class="button small"><a href="https://github.com/LehemT?tab=repositories" target="_blank">Code</a></span></li>
+									</ul>
+								</div>
+							</article>
 
 							<article>
 								<a class="image">
-									<img src="images/pic02.jpg" alt="Data Visualizer">
+									<img src="images/world.jpg" alt="World of Wander">
+								</a>
+								<div class="caption">
+									<h3>World of Wander</h3>
+									<p>...</p>
+									<ul class="actions fixed">
+										<li><span class="button small"><a href="https://github.com/LehemT/World-of-Wander" target="_blank">Code</a></span></li>
+									</ul>
+								</div>
+							</article>
+
+							<article>
+								<a class="image">
+									<img src="images/tracker.jpg" alt="Project Tracker">
+								</a>
+								<div class="caption">
+									<h3>ABC Project Tracker</h3>
+									<p>...</p>
+									<ul class="actions fixed">
+										<li><span class="button small"><a href="https://github.com/LehemT/ABC-Project-Tracker" target="_blank">Code</a></span></li>
+									</ul>
+								</div>
+							</article>
+
+							<article>
+								<a class="image">
+									<img src="images/data.jpg" alt="Data Visualizer">
 								</a>
 								<div class="caption">
 									<h3>Data Visualizer</h3>
@@ -93,14 +133,14 @@
 								I'm currently seeking Winter 2025 oppertunities!
 								<br>
 								<br>
-								Technical Skills
+								<strong>👩🏾‍💻Technical Skills</strong>
 								<br>
 								   • Languages: Java, Python, C/C++
 								<br>
 							           • Libraries & Frameworks: JUnit, Matplotlib, NumPy, Pandas, scikit-learn, Swing
 								<br>
 								<br>
-								Extracurriculars
+								<strong>🤝Extracurriculars</strong>
 								<br>
 								   • Logistics Coordinator at <a href="https://hackthehill.org/" target="_blank">Hack the Hill</a>
 								<br>
