--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						</ul>
 					</div>
 
-						<div class="gallery style1 medium darkbox onscroll-fade-in">
+						<div class="gallery style1 medium lightbox onscroll-fade-in">
 							
 							<article>
 								<a class="image">
