--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
 									</ul>
 								</div>
 							</article>
-							
 							<article>
 								<a class="image">
 									<img src="images/study.jpg" alt="Study Sync">
@@ -83,7 +82,6 @@
 									</ul>
 								</div>
 							</article>
-
 							<article>
 								<a class="image">
 									<img src="images/world.jpg" alt="World of Wander">
@@ -96,7 +94,6 @@
 									</ul>
 								</div>
 							</article>
-
 							<article>
 								<a class="image">
 									<img src="images/tracker.jpg" alt="Project Tracker">
@@ -109,7 +106,6 @@
 									</ul>
 								</div>
 							</article>
-
 							<article>
 								<a class="image">
 									<img src="images/data.jpg" alt="Data Visualizer">
@@ -119,6 +115,18 @@
 									<p>A data visualizer built with Python.</p>
 									<ul class="actions fixed">
 										<li><span class="button small"><a href="https://github.com/LehemT/Data-Visualizer" target="_blank">Code</a></span></li>
+									</ul>
+								</div>
+							</article>
+							<article>
+								<a class="image">
+									<img src="images/repo.jpg" alt="More Repos">
+								</a>
+								<div class="caption">
+									<h3>More</h3>
+									<p>...</p>
+									<ul class="actions fixed">
+										<li><span class="button small"><a href="https://github.com/LehemT?tab=repositories" target="_blank">Repositories</a></span></li>
 									</ul>
 								</div>
 							</article>
