--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Lehem Temesgen</h1>
-							<p>
+							<p class="major">
 								Welcome to my personal website, where I share my ongoing journey in tech. Feel free to explore the options below to learn more about me, my work, and my background!
 								<br>
 							<p>
@@ -26,7 +26,6 @@
 								<li><a href="#projects" class="button big wide smooth-scroll-middle">Projects</a></li>
 								<li><a href="#more" class="button big wide smooth-scroll-middle">More</a></li>
 							</ul>
-							<p class="major"></p>
 						</div>
 						<div class="image">
 							<img src="images/headshot.png" alt="Lehem Temesgen"/>
@@ -56,8 +55,7 @@
 						</ul>
 					</div>
 
-						<div class="gallery style1 medium lightbox onscroll-fade-in">
-							
+						<div class="gallery style2 medium lightbox onscroll-fade-in">
 							<article>
 								<a class="image">
 									<img src="images/facebook.jpg" alt="Text-Based Facebook">
