--- a/index.html
+++ b/index.html
@@ -62,9 +62,12 @@
 								</a>
 								<div class="caption">
 									<h3>Text-Based Facebook</h3>
-									<p>A text-based facebook implementation built with C.</p>
+									<p> Console-based Facebook simulation.
+										<br>
+										C
+									</p>
 									<ul class="actions fixed">
-										<li><span class="button small"><a href="https://github.com/LehemT/Text-Based-Facebook" target="_blank">Code</a></span></li>
+										<li><span class="button small"><a href="https://github.com/LehemT/Text-Based-Facebook" target="_blank">CODE</a></span></li>
 									</ul>
 								</div>
 							</article>
@@ -74,9 +77,14 @@
 								</a>
 								<div class="caption">
 									<h3>Study Sync</h3>
-									<p>...</p>
+									<p>Interactive school organizer.
+										<br>
+										In development⚙️
+										<br>
+										Java, Swing, SHA-256
+									</p>
 									<ul class="actions fixed">
-										<li><span class="button small"><a href="https://github.com/LehemT?tab=repositories" target="_blank">Code</a></span></li>
+										<li><span class="button small"><a href="https://github.com/LehemT?tab=repositories" target="_blank">CODE</a></span></li>
 									</ul>
 								</div>
 							</article>
@@ -86,9 +94,12 @@
 								</a>
 								<div class="caption">
 									<h3>World of Wander</h3>
-									<p>...</p>
+									<p>Console-based exploration game
+										<br>
+										Java, Scanner
+									</p>
 									<ul class="actions fixed">
-										<li><span class="button small"><a href="https://github.com/LehemT/World-of-Wander" target="_blank">Code</a></span></li>
+										<li><span class="button small"><a href="https://github.com/LehemT/World-of-Wander" target="_blank">CODE</a></span></li>
 									</ul>
 								</div>
 							</article>
@@ -98,9 +109,12 @@
 								</a>
 								<div class="caption">
 									<h3>ABC Project Tracker</h3>
-									<p>...</p>
+									<p> Project milestones and budget tracker
+										<br>
+										C
+									</p>
 									<ul class="actions fixed">
-										<li><span class="button small"><a href="https://github.com/LehemT/ABC-Project-Tracker" target="_blank">Code</a></span></li>
+										<li><span class="button small"><a href="https://github.com/LehemT/ABC-Project-Tracker" target="_blank">CODE</a></span></li>
 									</ul>
 								</div>
 							</article>
@@ -110,9 +124,12 @@
 								</a>
 								<div class="caption">
 									<h3>Data Visualizer</h3>
-									<p>A data visualizer built with Python.</p>
+									<p>Data sorting and visualization tool.
+										<br>
+										Python, Matplotlib, NumPy
+									</p>
 									<ul class="actions fixed">
-										<li><span class="button small"><a href="https://github.com/LehemT/Data-Visualizer" target="_blank">Code</a></span></li>
+										<li><span class="button small"><a href="https://github.com/LehemT/Data-Visualizer" target="_blank">CODE</a></span></li>
 									</ul>
 								</div>
 							</article>
@@ -122,9 +139,9 @@
 								</a>
 								<div class="caption">
 									<h3>More</h3>
-									<p>...</p>
+									<p>Visit my repository for more mini projects!</p>
 									<ul class="actions fixed">
-										<li><span class="button small"><a href="https://github.com/LehemT?tab=repositories" target="_blank">Repositories</a></span></li>
+										<li><span class="button small"><a href="https://github.com/LehemT?tab=repositories" target="_blank">REPOS</a></span></li>
 									</ul>
 								</div>
 							</article>
