--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 								</a>
 								<div class="caption">
 									<h3>World of Wander</h3>
-									<p>Console-based exploration game
+									<p>Console-based exploration game.
 										<br>
 										Java, Scanner
 									</p>
@@ -109,7 +109,7 @@
 								</a>
 								<div class="caption">
 									<h3>ABC Project Tracker</h3>
-									<p> Project milestones and budget tracker
+									<p> Project milestones and budget tracker.
 										<br>
 										C
 									</p>
